--- a/vislab/config.json
+++ b/vislab/config.json
@@ -2,6 +2,7 @@
     "paths": {
         "VOC2007": "~/Dropbox/work/vision_data/VOC2007",
         "data": "~/work/vislab-dev/data",
-        "shared_data": "~/work/vislab-dev/data/shared"
+        "shared_data": "~/work/vislab-dev/data/shared",
+        "static_data": "~/work/vislab-dev/data/static"
     }
 }
