pascal now includes metaclasses and some plots in notebook

--- a/vislab/config.json
+++ b/vislab/config.json
@@ -1,6 +1,6 @@
 {
     "paths": {
-        "VOC2007": "~/Dropbox/work/vision_data/VOC2007",
+        "VOC": "~/work/vision_data/VOC2007",
         "data": "~/work/vislab-dev/data",
         "shared_data": "~/work/vislab-dev/data/shared",
         "static_data": "~/work/vislab-dev/data/static"
