--- a/vislab/config.json
+++ b/vislab/config.json
@@ -4,6 +4,7 @@
         "AVA": "~/work/vision_data/AVA_dataset",
         "data": "~/work/vislab/data",
         "shared_data": "~/work/vislab/data/shared",
-        "static_data": "~/work/vislab/data/static"
+        "static_data": "~/work/vislab/data/static",
+        "feats": "~/work/aphrodite/data/feats"
     }
 }
