Adding API key fields to config json.

--- a/vislab/config.json.example
+++ b/vislab/config.json.example
@@ -13,6 +13,10 @@
         "feats": "~/work/vislab/data/feats",
         "predict": "~/work/vislab/data/predict",
         "results": "~/work/vislab/data/results"
+    },
+    "api_keys": {
+        "flickr": "YOUR API KEY HERE",
+        "behance": "YOUR API KEY HERE"
     }
 }
 
