Small fix in server-starting.

--- a/vislab/config.json.example
+++ b/vislab/config.json.example
@@ -19,8 +19,8 @@
         "behance": ""
     },
     "servers": {
-        "mongo": ["0.0.0.0", "27017"],
-        "redis": ["0.0.0.0", "6379"]
+        "mongo": ["0.0.0.0", 27017],
+        "redis": ["0.0.0.0", 6379]
     }
 }
 
