--- a/vislab/config.json.example
+++ b/vislab/config.json.example
@@ -13,7 +13,9 @@
         "feats": "~/work/vislab-git/data/feats",
         "predict": "~/work/vislab-git/data/predict",
         "results": "~/work/vislab-git/data/results",
-        "caffe": "~/work/caffe-bvlc"
+        "caffe": "~/work/caffe-bvlc",
+        "vlg_extractor": "~/work/vlg_extractor_v1.1.1_linux"
+
     },
     "api_keys": {
         "flickr": "",
@@ -21,7 +23,8 @@
     },
     "servers": {
         "mongo": ["0.0.0.0", 27017],
-        "redis": ["0.0.0.0", 6379]
+        "redis": ["0.0.0.0", 6379],
+        "redis_exclude": "orange6"
     }
 }
 
