--- a/vislab/config.json.example
+++ b/vislab/config.json.example
@@ -14,7 +14,7 @@
         "predict": "~/work/vislab-git/data/predict",
         "results": "~/work/vislab-git/data/results",
         "caffe": "~/work/caffe-bvlc",
-        "vlg_extractor": "~/work/vlg_extractor_v1.1.1_linux"
+        "vlg_extractor": "~/work/vlg_extractor_v1.1.0"
 
     },
     "api_keys": {
